--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 edition = "2024"
 description = "Launch Chromium with profile matching for URLs"
 license = "MIT"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Micah <micah@example.com>"]
+repository = "https://github.com/MicahStevens/brolaunch"
+homepage = "https://github.com/MicahStevens/brolaunch"
+readme = "README.md"
+keywords = ["chromium", "browser", "launcher", "profile", "productivity"]
+categories = ["command-line-utilities", "gui"]
 
 [dependencies]
 regex = "1"
