--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 name = "brolaunch"
 version = "0.2.0"
 edition = "2024"
-description = "Launch Chromium with profile matching for URLs"
+description = "Launch Chromium or Firefox with profile matching for URLs"
 license = "MIT"
 authors = ["Micah <micah@example.com>"]
 repository = "https://github.com/MicahStevens/brolaunch"
 homepage = "https://github.com/MicahStevens/brolaunch"
 readme = "README.md"
-keywords = ["chromium", "browser", "launcher", "profile", "productivity"]
+keywords = ["chromium", "firefox", "browser", "launcher", "profile", "productivity"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
